<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>io.openvidu</groupId>
		<artifactId>openvidu-parent</artifactId>
		<version>2.0.0</version>
	</parent>

	<artifactId>openvidu-test-e2e</artifactId>
	<version>1.1.1</version>
	<packaging>jar</packaging>

	<name>OpenVidu Test e2e</name>
	<description>End2End tests for OpenVidu TestApp</description>
	<url>https://openvidu.io</url>

	<licenses>
		<license>
			<name>Apache 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<organization>
		<name>OpenVidu</name>
		<url>https://openvidu.io</url>
	</organization>

	<scm>
		<url>https://github.com/OpenVidu/openvidu.git</url>
		<connection>scm:git:https://github.com/OpenVidu/openvidu.git</connection>
		<developerConnection>scm:git:https://github.com/OpenVidu/openvidu.git</developerConnection>
		<tag>develop</tag>
	</scm>

	<developers>
		<developer>
			<id>openvidu.io</id>
			<name>-openvidu.io Community</name>
			<organization>openvidu.io</organization>
			<organizationUrl>https://openvidu.io</organizationUrl>
		</developer>
	</developers>

	<properties>
		<!-- Java 11 -->
		<java.version>11</java.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<!-- Encoding -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${version.surefire.plugin}</version>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<version>${version.spring-boot}</version>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.skyscreamer</groupId>
					<artifactId>jsonassert</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>io.github.bonigarcia</groupId>
			<artifactId>webdrivermanager</artifactId>
			<version>${version.webdrivermanager}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>${version.selenium}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-api</artifactId>
			<version>${version.selenium}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-remote-driver</artifactId>
			<version>${version.selenium}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>${version.gson}</version>
		</dependency>
		<dependency>
			<groupId>org.jcodec</groupId>
			<artifactId>jcodec-javase</artifactId>
			<version>${version.jcodec}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.mashape.unirest</groupId>
			<artifactId>unirest-java</artifactId>
			<version>${version.unirest}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.openvidu</groupId>
			<artifactId>openvidu-test-browsers</artifactId>
			<version>${version.openvidu.test.browsers}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.openvidu</groupId>
			<artifactId>openvidu-java-client</artifactId>
			<version>${version.openvidu.java.client}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

</project>
